# qdoled-defringe

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main_dll.cpp
dll/: CMakeLists.txt
gui/: App.xaml.cs  CMakeLists.txt  Injector.cs  MainViewModel.cs  MainWindow.xaml.cs  Program.cs  QOD.csproj  packages.config
source/dll/: dll.cpp
source/gui/: App.xaml  CMakeLists.txt  Injector.cs  KeyboardUtils.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  MonitorData.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs
